kubernetes/apps/monitoring-system/victoria-logs/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name victoria-logs-server
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: victoriametrics.png
    gethomepage.dev/name: VictoriaLogs
    gethomepage.dev/group: Observability
spec:
  hostnames: ["vlogs.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *name
          port: 9428
